<resources>
    <string name="app_name">Course Demo App</string>
    <string name="Email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">\n\nAlready have an account?</string>
    <string name="login">Sign In</string>
    <string name="admin_panel">\nAdmin Panel:</string>
    <string name="sign_out">Sign out</string>
    <string name="none">None\n</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="send_verification_link">Send Verification Link</string>
    <string name="ViewPDF">PDF</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="course_content">*Course Content*</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Profile">Profile</string>

</resources>
